--- a/views/add-product.html
+++ b/views/add-product.html
@@ -6,87 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Product</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        main {
-            padding: 1rem;
-        }
-
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: #2a856e;
-            padding: 0 0.5rem;
-        }
-
-        .main-header__nav {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .main-header__item-list {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            display: flex;
-        }
-
-        .main-header__item {
-            padding: 0 1rem;
-            margin: 0;
-        }
-
-        .main-header__item a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .main-header__item a:hover, .main-header__item a:active, .main-header__item a.active {
-            color: #0c4b65;
-        }
-
-        .product-form {
-            width: 20rem;
-            max-width: 90%;
-            margin: 0 auto;
-        }
-
-        .product-form-control {
-            margin: 1rem 0;
-        }
-
-        .product-form-control label,
-        .product-form-control input {
-            display: block;
-            width: 100%;
-        }
-
-        .product-form-control input {
-            font: inherit;
-            border: 1px solid #2a856e;
-            border-radius: 4px;
-        }
-
-        button {
-            background-color: #d6fff4;
-            border: 1px solid #133d33;
-            color: #133d33;
-            font: inherit;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover, button:active, button.active {
-            background-color: #2a856e;
-            color: #d6fff4;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
