--- a/views/shop.html
+++ b/views/shop.html
@@ -6,51 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Product</title>
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        main {
-            padding: 1rem;
-        }
-
-        .main-header {
-            width: 100%;
-            height: 3.5rem;
-            background-color: #2a856e;
-            padding: 0 0.5rem;
-        }
-
-        .main-header__nav {
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .main-header__item-list {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            display: flex;
-        }
-
-        .main-header__item {
-            padding: 0 1rem;
-            margin: 0;
-        }
-
-        .main-header__item a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .main-header__item a:hover, .main-header__item a:active, .main-header__item a.active {
-            color: #0c4b65;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
