--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,39 +1,41 @@
 .product-form {
-    width: 20rem;
-    max-width: 90%;
-    margin: 0 auto;
+  width: 20rem;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
 .product-item {
-    width: 20rem;
-    max-width: 95%;
+  width: 20rem;
+  max-width: 95%;
 }
 
 .product__title {
-    font-size: 1.2rem;
-    text-align: center;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 .product__price {
-    text-align: center;
-    color: #4d4d4d;
-    margin-bottom: 0.5rem;
+  text-align: center;
+  color: #4d4d4d;
+  margin-bottom: 0.5rem;
 }
 
 .product__description {
-    text-align: center;
+  text-align: center;
 }
 
 button {
-    background-color: #d6fff4;
-    border: 1px solid #133d33;
-    color: #133d33;
-    font: inherit;
-    border-radius: 4px;
-    cursor: pointer;
+  background-color: #d6fff4;
+  border: 1px solid #133d33;
+  color: #133d33;
+  font: inherit;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-button:hover, button:active, button.active {
-    background-color: #2a856e;
-    color: #d6fff4;
+button:hover,
+button:active,
+button.active {
+  background-color: #2a856e;
+  color: #d6fff4;
 }
