--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -12,6 +12,18 @@
             <label for="title">Title</label>
             <input id="title" name="title" type="text">
         </div>
+        <div class="product-form-control">
+            <label for="imageUrl">Image URL</label>
+            <input id="imageUrl" name="imageUrl" type="text">
+        </div>
+        <div class="product-form-control">
+            <label for="price">Price</label>
+            <input id="price" name="price" type="number" step="0.01" min="0.00">
+        </div>
+        <div class="product-form-control">
+            <label for="description">Description</label>
+            <textarea id="description" name="description" rows="5"></textarea>
+        </div>
         <button type="submit">Add Product</button>
     </form>
 </main>
