--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -8,23 +8,24 @@
 
 <main>
     <form class="product-form" action="/admin/add-product" method="POST">
-        <div class="product-form-control">
+        <div class="form-control">
             <label for="title">Title</label>
-            <input id="title" name="title" type="text">
+            <input type="text" name="title" id="title">
         </div>
-        <div class="product-form-control">
+        <div class="form-control">
             <label for="imageUrl">Image URL</label>
-            <input id="imageUrl" name="imageUrl" type="text">
+            <input type="text" name="imageUrl" id="imageUrl">
         </div>
-        <div class="product-form-control">
+        <div class="form-control">
             <label for="price">Price</label>
-            <input id="price" name="price" type="number" step="0.01" min="0.00">
+            <input type="number" name="price" id="price" step="0.01">
         </div>
-        <div class="product-form-control">
+        <div class="form-control">
             <label for="description">Description</label>
-            <textarea id="description" name="description" rows="5"></textarea>
+            <textarea name="description" id="description" rows="5"></textarea>
         </div>
-        <button type="submit">Add Product</button>
+
+        <button class="btn" type="submit">Add Product</button>
     </form>
 </main>
 <%- include('../includes/end.ejs') %>
