--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,16 @@
 
 <body>
 <%- include('../includes/navigation.ejs') %>
+<main>
+    <% if (products.length > 0)  { %>
+        <h1>Your shopping cart</h1>
+    <ul class="cart">
+        <% products.forEach(p => { %>
+            <li><%= p.productData.title %> (<%= p.quantity %>)</li>
+        <% }) %>
+    </ul>
+    <% } else { %>
+        <h1>Your Cart is empty</h1>
+    <% } %>
+</main>
 <%- include('../includes/end.ejs') %>
