--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
 </head>
 
 <body>
@@ -6,12 +7,13 @@
 <main>
     <% if (products.length > 0)  { %>
         <h1>Your shopping cart</h1>
-    <ul class="cart">
+        <% console.log(products)%>
+    <ul class="cart__item-list">
         <% products.forEach(p => { %>
-            <li>
-                <p><%= p.productData.title %> (<%= p.quantity %>)</p>
+            <li class="cart__item">
+                <p><%= p.title %> (<%= p.cartItem.quantity %>)</p>
                  <form action="/cart-delete-item" method="POST">
-                     <input type="hidden" name="productId" value="<%= p.productData.id %>">
+                     <input type="hidden" name="productId" value="<%= p.id %>">
                      <button class="btn" type="submit">Delete</button>
                  </form>
             </li>
