--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,6 +59,7 @@ form {
 
 .centered {
   text-align: center;
+  justify-items: center;
 }
 
 .mobile-nav {
@@ -194,6 +195,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
