--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -7,19 +7,23 @@
 <main class="centered">
     <% if (products.length > 0)  { %>
         <h1>Your shopping cart</h1>
-    <ul class="cart__item-list">
-        <% products.forEach(p => { %>
-            <li class="cart__item">
-                <h1><%= p.title %></h1>
-                <img style="width: 10%" src="<%= p.imageUrl %>" alt="<%= p.title %>">
-                <h2>Quantity: <%= p.cartItem.quantity %></h2>
-                 <form action="/cart-delete-item" method="POST">
-                     <input type="hidden" name="productId" value="<%= p.id %>">
-                     <button class="btn danger" type="submit">Delete</button>
-                 </form>
-            </li>
-        <% }) %>
-    </ul>
+        <ul class="cart__item-list">
+            <% products.forEach(p => { %>
+                <li class="cart__item">
+                    <h1><%= p.title %></h1>
+                    <img style="width: 10%" src="<%= p.imageUrl %>" alt="<%= p.title %>">
+                    <h2>Quantity: <%= p.cartItem.quantity %></h2>
+                    <form action="/cart-delete-item" method="POST">
+                        <input type="hidden" name="productId" value="<%= p.id %>">
+                        <button class="btn danger" type="submit">Delete</button>
+                    </form>
+                </li>
+            <% }); %>
+        </ul>
+        <hr>
+        <form method="POST" action="/create-order">
+            <button class="btn" type="submit">Order</button>
+        </form>
     <% } else { %>
         <h1>Your Cart is empty</h1>
     <% } %>
