--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -2,7 +2,7 @@
 .main-header {
     width: 100%;
     height: 3.5rem;
-    background-color: #00695c;
+    background-color: #005669;
     padding: 0 1.5rem;
     display: flex;
     align-items: center;
@@ -34,5 +34,5 @@
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-    color: #ffeb3b;
+    color: #e3f37a;
 }
