--- a/client/src/css/Product.css
+++ b/client/src/css/Product.css
@@ -57,5 +57,5 @@
 
 .product-form-control input:focus,
 .product-form-control textarea:focus {
-    outline-color: #00695c;
+    outline-color: #005669;
 }
