--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -1,4 +1,3 @@
-
 .main-header {
     width: 100%;
     height: 3.5rem;
@@ -28,6 +27,16 @@
     margin: 0 1rem;
     padding: 0;
     list-style: none;
+}
+
+.main-header__item button {
+    margin: 0 1rem;
+    padding: 0;
+    border: none;
+    background: none;
+    outline: none;
+    color: white;
+    font-weight: normal;
 }
 
 .main-header__item a {
