--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -19,7 +19,7 @@
 .main-header__item-list {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 6px;
     display: flex;
 }
 
@@ -39,13 +39,26 @@
     font-weight: normal;
 }
 
+.main-header__item button:hover {
+    background: none;
+    text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.4),
+    0px 0px 12px rgba(255, 255, 255, 0.6);
+    transform: scale(1.05);
+}
+
 .main-header__item a {
     text-decoration: none;
     color: white;
+    transition: text-shadow 0.3s ease-in-out, transform 0.2s ease-in-out;
 }
 
-.main-header__item a:hover,
+.main-header__item a:hover {
+    text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.4),
+    0px 0px 12px rgba(255, 255, 255, 0.6);
+    transform: scale(1.05);
+}
+
 .main-header__item a:active,
 .main-header__item a.active {
-    color: #e3f37a;
+    font-weight: 570;
 }
