--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -157,19 +157,19 @@ form {
 
 .btn:hover,
 .btn:active {
-    background-color: #38dac1;
+    background-color: #10808a;
     color: white;
 }
 
 .secondary {
+    border: none;
     background: linear-gradient(135deg, #1aa892, #10808a);
     color: white;
     margin-top: 20px;
 }
 
 .secondary:hover {
-    background: #38dac1;
-    transition: 0.9s;
+    background: #10808a;
 }
 
 /* Featured Products */
